--- a/food/templates/food/details.html
+++ b/food/templates/food/details.html
@@ -1,5 +1,37 @@
-<h1>{{item.item_name}} </h1>
+
+{% extends "food/base.html" %}
+{% block body %}
+
+
+      <div class"container">
+
+        <div class="row">
+            <div class="col-md-6">
+            
+                <img class="card" src="{{ item.item_img }}" alt="Coming Soon" style="height: 300px;">
+
+            </div>
+
+            <div class="col-md-6">
+            
+                <h1>{{item.item_name}}</h1>
+                <h2>{{item.item_desc}}</h2>
+                <h3>${{item.item_price}}</h3>
+            </div>
+
+        </div>
+
+
+      </div>
+
+
+
+
+            {% comment %} old code {% endcomment %}
+{% comment %} <h1>{{item.item_name}} </h1>
 
 <h1>{{item.desc}} </h1>
 
-<h1>{{item.item_price}} </h1>
+<h1>{{item.item_price}} </h1> {% endcomment %}
+
+{% endblock%}
