--- a/food/templates/food/index.html
+++ b/food/templates/food/index.html
@@ -1,34 +1,45 @@
+{% extends "food/base.html" %}
 
-{% load static %}
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <title> Doc</title>
-     
-   <link rel="stylesheet" href="{% static 'food/style.css' %}">
-
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
-<body>
-<h1> This is a template<h1>
-
+{% block body %}
     {% for i in item_list %}
+ 
     
-<ul>
+    <div class="row mb-3">
+        <div class="col-md-3 offset-md-1">
+            <img class="card" src="{{ i.item_img }}" alt="Coming Soon" style="height: 100px;">
+
+
+        </div>
+
+        <div class="col-md-4 offset-md-1">
+          <h3>{{i.item_name}}</h3>
+          <h5>{{i.item_desc}}</h5>
+          <h6>{{i.item_price}}</h6>
+        </div>
+
+        <div class="col-md-2">
+       <a href="{% url 'food:detail' i.id %}" class="btn btn-success">Details</a>
+        </div>
+
+      
+    </div>
+
+
+
+
+            {% comment %} old code {% endcomment %}
+{% comment %} <ul>
     <li>
         
         {% comment %} <a href="/{{i.id}}"> {{i.id}}--{{i.item_name}}</a> {% endcomment %}
 
-        <a href={% url 'food:detail' i.id %}> {{i.id}}--{{i.item_name}}</a>
+        {% comment %} <a href={% url 'food:detail' i.id %}> {{i.id}}--{{i.item_name}}</a> {% endcomment %}
 {% comment %}namespace   app name:internal link(name) {% endcomment %}
     </li>        
 
-</ul>
+{% comment %} <ul> {% endcomment %}
+
     {% endfor %}
 
-   
-</body>
-
-</html>
+  
+    {% endblock%}
