--- a/food/templates/food/base.html
+++ b/food/templates/food/base.html
@@ -18,7 +18,7 @@
         <a href="#" class="navbar-brand">FoodApp</a>
     
         <div class="navbar">
-            <a class="nav-item mx-2" href="#">Add item</a>
+            <a class="nav-item mx-2" href="{% url 'food:create_item' %}">Add item</a>
             <a class="nav-item mx-2" href="#">Delete item</a>
             <a class="nav-item mx-2" href="#">View item</a>
         </div>
