--- a/food/templates/food/details.html
+++ b/food/templates/food/details.html
@@ -17,6 +17,8 @@
                 <h1>{{item.item_name}}</h1>
                 <h2>{{item.item_desc}}</h2>
                 <h3>${{item.item_price}}</h3>
+                <a href="{% url 'food:update_item' item.id %}" >Update</a>
+                <br><a href="{% url 'food:delete_item' item.id %}" >delete</a>
             </div>
 
         </div>
