--- a/food/templates/food/index.html
+++ b/food/templates/food/index.html
@@ -6,15 +6,17 @@
     
     <div class="row mb-3">
         <div class="col-md-3 offset-md-1">
-            <img class="card" src="{{ i.item_img }}" alt="Coming Soon" style="height: 100px;">
+            <img class="card" src="{{ i.item_img }}" alt="Coming Soon" style="height: 200px; width: 400px;">
+
 
 
         </div>
 
-        <div class="col-md-4 offset-md-1">
+        <div class="col-md-4 offset-md-2">
           <h3>{{i.item_name}}</h3>
           <h5>{{i.item_desc}}</h5>
           <h6>{{i.item_price}}</h6>
+          <h6>{{i.user_name}}</h6>
         </div>
 
         <div class="col-md-2">
