--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,7 +1,48 @@
-<form method='POST'> 
-{% csrf_token %}
-{{ form }}
+{% extends 'food/base.html' %}
 
-<button type="submit"> Login </button>
+{% block body %}
 
-</form>
+<div class="container"> 
+    <div class="row">
+
+       <div class="col-md-4 offset-md-4">
+    
+          <div class="card">
+    
+             <div class="card-header text-white bg-info">
+    
+                <div class="card-title">
+    
+                    Login 
+                </div>
+    
+              </div>
+    
+               <div class="card-body">
+    
+                   <form method="POST">
+    
+                       {% csrf_token %} 
+                       {{form}}
+                       
+                        {% comment %} {% for field in form %}
+                            <div class="form-group">
+                                {{ field.name }}
+                                {{ field }}
+
+                        {% endfor %} {% endcomment %}
+
+                      <button class="btn-info" type="submit">Login</button>
+    
+                   </form>
+    
+                 </div>
+    
+            </div>
+    
+         </div>
+     
+    </div>
+
+</div>
+{% endblock %}
