--- a/food/templates/food/item-form.html
+++ b/food/templates/food/item-form.html
@@ -1,11 +1,52 @@
 
-{% extends "food/base.html" %}
+
+{% extends 'food/base.html' %}
 
 {% block body %}
-<form method="POST">
-  {% csrf_token %}
-    {{ form }}
-  <button type="submit"> Save </button>
-</form>
 
-{% endblock%}
+<div class="container"> 
+    <div class="row">
+
+       <div class="col-md-4 offset-md-4">
+    
+          <div class="card">
+    
+             <div class="card-header text-white bg-info">
+    
+                <div class="card-title">
+    
+                    Login 
+                </div>
+    
+              </div>
+    
+               <div class="card-body">
+    
+                   <form method="POST">
+    
+                       {% csrf_token %} 
+                       {% comment %} {{form}} {% endcomment %}
+                       
+                         {% for field in form %}
+                            <div class="form-group">
+                                {{ field.name }}
+                                <br>
+                                {{ field }}
+
+                        {% endfor %} 
+                        <br>
+                        <br>
+                      <button class="btn-info" type="submit">submit</button>
+    
+                   </form>
+    
+                 </div>
+    
+            </div>
+    
+         </div>
+     
+    </div>
+
+</div>
+{% endblock %}
