--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,8 +1,52 @@
-<form method='POST'>
 
-    {%  csrf_token %}
-    {{ form }}  {% comment %} from backend   {% endcomment %}
+
+{% extends 'food/base.html' %}
+
+{% block body %}
+
+<div class="container"> 
+    <div class="row">
+
+       <div class="col-md-4 offset-md-4">
     
-    <button type="submit">submit </button>
+          <div class="card">
+    
+             <div class="card-header text-white bg-info">
+    
+                <div class="card-title">
+    
+                    Login 
+                </div>
+    
+              </div>
+    
+               <div class="card-body">
+    
+                   <form method="POST">
+    
+                       {% csrf_token %} 
+                       {% comment %} {{form}} {% endcomment %}
+                       
+                         {% for field in form %}
+                            <div class="form-group">
+                                {{ field.name }}
+                                <br>
+                                {{ field }}
 
-</form>
+                        {% endfor %} 
+                        <br>
+                        <br>
+                      <button class="btn-info" type="submit">Register</button>
+    
+                   </form>
+    
+                 </div>
+    
+            </div>
+    
+         </div>
+     
+    </div>
+
+</div>
+{% endblock %}
